# entities

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  daily-check.yml
src/: entities.rs  lib.rs
tests/: spec_conformity.rs
