[package]
name = "entities"
version = "1.0.2-rc.1"
authors = ["Philip Jackson <p-jackson@live.com>"]
description = "Provides the raw data needed to convert to and from HTML entities."
repository = "https://github.com/p-jackson/entities"
documentation = "https://docs.rs/entities"
readme = "README.md"
license = "MIT"
keywords = ["HTML", "entities", "character", "escape"]
edition = "2015"
rust-version = "1.13"

[dependencies]

[dev-dependencies]
serde_json = "1.0"
